[build-system]

requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project] 

name = "datalab"             
version = "0.1.0"
description = "DataLab: Unified End-to-End Data Library for Tabular and Graph data."

authors = [
    {name = "Kshitij Sharma"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [

    "pandas>= 2.0",
    "numpy>= 1.24",
    "polars>= 1.0",
    "matplotlib>= 3.7",
    "scikit-learn>= 1.3",
    "missingno>= 0.5",
    "pyarrow>= 14.0"
]

# Optional metadata

license = {text = "MIT"}

keywords = ["data", "machine-learning", "data-cleaning", "tabular", "graph"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["datalab*"]
