[build-system]

requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project] 

name = "datalab_pre_release"             
version = "0.1.0b7"
description = "DataLab v0.1.0b7 - Beta release with critical bug fixes for non-Jupyter environments, improved documentation, contributions workflow, and enhanced stability for data diagnosis and preprocessing workflows."

authors = [
    {name = "Kshitij Sharma"}
]
readme = "README.md"
requires-python = ">= 3.12"

dependencies = [

    "pandas>= 2.0",
    "numpy>= 1.24",
    "polars>= 1.0",
    "matplotlib>= 3.7",
    "scikit-learn>= 1.3",
    "missingno>= 0.5",
    "pyarrow>= 14.0"
]

# metadata

license = {text = "MIT"}

keywords = ["data", "machine-learning", "missing-data", "data-science", "data-cleaning", "tabular", "graph"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["datalab*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd"
    
]

[project.urls]

Homepage = "https://github.com/TheDucky-2/DataLab"
Source = "https://github.com/TheDucky-2/DataLab"
Documentation = "https://github.com/TheDucky-2/DataLab/tree/main/docs"
Guides = "https://github.com/TheDucky-2/DataLab/tree/main/guides"
Issues = "https://github.com/TheDucky-2/DataLab/issues"

[tool.ruff]
# Only checking for missing docstrings
select = ["D100", "D101", "D103"]

#ignoring common folders
exclude = ["__pycache__", "venv", ".git"]

