[build-system]

requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project] 

name = "datalabx_pre_release"             
version = "0.1.0b10"
description = "DataLabX v0.1.0b10 - First Public Release with Class-Based API & Flexible Data Loading."

authors = [
    {name = "Kshitij Sharma"}
]
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [

    "pandas>= 2.0",
    "numpy>= 1.24",
    "polars>= 1.0",
    "matplotlib>= 3.7",
    "scikit-learn>= 1.3",
    "missingno>= 0.5",
    "pyarrow>= 14.0"
]

# metadata

license = {text = "MIT"}

keywords = ["data", "machine-learning", "missing-data", "data-science", "data-cleaning", "tabular", "graph"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# extra dependencies 
[project.optional-dependencies]
excel = ["fastexcel"]
test = ["pytest", "openpyxl", "fastexcel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["datalabx*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd"
    
]

[project.urls]

Homepage = "https://github.com/TheDucky-2/DataLabX"
Source = "https://github.com/TheDucky-2/DataLabX"
Documentation = "https://github.com/TheDucky-2/DataLabX/tree/main/docs"
Guides = "https://github.com/TheDucky-2/DataLabX/tree/main/guides"
Issues = "https://github.com/TheDucky-2/DataLabX/issues"

[tool.ruff]
# Only checking for missing docstrings
select = ["D100", "D101", "D103"]

#ignoring common folders
exclude = ["__pycache__", "venv", ".git"]

